# chess_AI

./: .gitignore  README.md  pyproject.toml
src/: display_Board.ipynb  main.py  starter-chess.py  test.py
